# private-claw

./: .gitignore  Makefile  pyproject.toml
.cursor/prompts/: code-review.md  implement-next-task.md
.cursor/rules/: assistant-v1-dev.mdc
config/: app.yaml  capabilities.yaml  channel.telegram.yaml  mcp_servers.yaml  memory.yaml  model.yaml  scheduler.yaml  store.yaml  tools.yaml
config/capabilities/: assistant.yaml  delegation_coding.yaml  deploy.yaml  finance_mcp.yaml  language_learning.yaml  macos_personal.yaml
docs/: DEVELOPMENT.md  HIGH_LEVEL_ARCHITECTURE.md  documentation_ruleset.md  project_tracker-example.json  project_tracker_template.json  project_tracker_viewer.html
docs/analysis/: mcp_integration_analysis.md
docs/assistant_v1/: ASSISTANT_V1_ARCHITECTURE_ANALYSIS.md  ASSISTANT_V1_IMPLEMENTATION_PLAN.md  ASSISTANT_V1_TECHNICAL_SPECIFICATION.md  CAPABILITY_CATALOG.md  COMPONENT_BOUNDARIES.md  HIGH_LEVEL_ARCHITECTURE.md  LANGUAGE_LEARNING_CONCEPT.md  SUBAGENT_ORCHESTRATION_CONTRACT.md  project_tracker.json  project_tracker_viewer.html
docs/assistant_v1/domains/: admin.md  agent.md  api.md  capabilities.md  memory.md  observability.md  store.md  subagents.md  telegram.md
mini-apps/fill-blanks/: index.html
mini-apps/fill-blanks/css/: style.css
mini-apps/fill-blanks/js/: app.js  decoder.js  fill_blanks.js  results.js
mini-apps/flashcards/: index.html
mini-apps/flashcards/css/: style.css
mini-apps/flashcards/js/: app.js  cards.js  decoder.js  results.js
mini-apps/matching/: index.html
src/prompts/: memory_agent_system.md
(+311 files in other folders)
